--- a/package.json
+++ b/package.json
@@ -1,21 +1,20 @@
 {
-  "name": "hever-map",
+  "name": "hever-teamim-map",
   "version": "1.0.0",
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "start": "ts-node ./src"
+    "start": "tsc && node ./dist"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "jstoxml": "^5.0.1"
+    "jstoxml": "^5.0.2"
   },
   "devDependencies": {
     "@types/jstoxml": "^2.0.4",
-    "@types/node": "^20.11.29",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.4.2"
+    "@types/node": "^20.16.10",
+    "typescript": "^5.6.2"
   }
 }
