--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "hever-teamim-map",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "index.ts",
   "scripts": {
     "start": "tsc && node ./dist"
