--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
+    "module": "es2022",
     "esModuleInterop": true,
     "target": "ES2020",
     "moduleResolution": "node",
